Fixed founder message join link being unclickable due to z-index.

--- a/omnipedia_site/stylesheets/blocks/_founder_message_join.scss
+++ b/omnipedia_site/stylesheets/blocks/_founder_message_join.scss
@@ -8,6 +8,14 @@
 
   .omnipedia-founder-message {
 
+    &__join {
+
+      position: relative;
+
+      z-index: index($founder-message-stacking-order, content);
+
+    }
+
     &__join-link {
 
       font-size:    110%;
